--- a/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense.vcxproj.filters
@@ -27,4 +27,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\cloud.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\sky.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\sword.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
