--- a/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3D56E52A-37FF-4E18-B7C7-911A4BE3D4E7}</ProjectGuid>
     <RootNamespace>TowerDefense</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,12 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Behaviour.cpp" />
+    <ClCompile Include="Clickable.cpp" />
     <ClCompile Include="GameEntity.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="ResourceLoader.cpp" />
+    <ClCompile Include="TowerButton.cpp" />
+    <ClCompile Include="TowerButtonHandler.cpp" />
     <ClCompile Include="Towerspot.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +148,8 @@
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ResourceLoader.h" />
+    <ClInclude Include="TowerButton.h" />
+    <ClInclude Include="TowerButtonHandler.h" />
     <ClInclude Include="Towerspot.h" />
   </ItemGroup>
   <ItemGroup>
