--- a/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3D56E52A-37FF-4E18-B7C7-911A4BE3D4E7}</ProjectGuid>
     <RootNamespace>TowerDefense</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -156,6 +156,7 @@
     <Image Include="Resources\cloud.png" />
     <Image Include="Resources\sky.png" />
     <Image Include="Resources\sword.png" />
+    <Image Include="Resources\tower-button.png" />
     <Image Include="Resources\towerspot.png" />
     <Image Include="Resources\tutorial-background.png" />
   </ItemGroup>
