--- a/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mob.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">pch.h</PrecompiledHeaderFile>
@@ -147,6 +148,7 @@
     <ClInclude Include="Clickable.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Mob.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ResourceLoader.h" />
     <ClInclude Include="Tower.h" />
