--- a/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense.vcxproj
@@ -136,6 +136,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResourceLoader.cpp" />
     <ClCompile Include="Tower.cpp" />
     <ClCompile Include="TowerButton.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResourceLoader.h" />
     <ClInclude Include="Tower.h" />
     <ClInclude Include="TowerButton.h" />
